暂存，回退到此前注解在成员变量上的注入方式。修剪所有并不必要的属性。